Fix overlapping toolbar & student dropdown

--- a/scss/all.scss
+++ b/scss/all.scss
@@ -22,7 +22,7 @@ body:has(.dashboard-progress-chart .container.plan.isFloating) {
     top: 65px;
     width: 30px;
     height: 150px;
-    z-index: 301;
+    z-index: 299;
     display: none;
     > button {
         // display: none;
